--- a/kwordle/index.html
+++ b/kwordle/index.html
@@ -18,8 +18,8 @@
         <menu>
           <li><a href="index.html">Home</a></li>
           <li><a href="play.html">Play</a></li>
-          <li><a href="scores.html">Scores</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="scores.html">Leaderboard</a></li>
+          <li><a href="stats.html">Stats</a></li>
         </menu>
       </nav>
 
@@ -39,9 +39,9 @@
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Kendra Schoonmaker</span>
       <br />
-      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+      <a href="https://github.com/kschoonmaker32/startup/tree/main/kwordle">GitHub</a>
     </footer>
   </body>
 </html>
