--- a/kwordle/play.html
+++ b/kwordle/play.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simon</title>
-    <link rel="icon" href="favicon.ico" />
+    <title>Play</title>
+    <!--<link rel="icon" href="favicon.ico" />-->
   </head>
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Simon<sup>&reg;</sup></h1>
+      <h1>Kwordle<sup>&reg;</sup></h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -18,8 +18,8 @@
         <menu>
           <li><a href="index.html">Home</a></li>
           <li><a href="play.html">Play</a></li>
-          <li><a href="scores.html">Scores</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="scores.html">Leaderboard</a></li>
+          <li><a href="stats.html">Stats</a></li>
         </menu>
       </nav>
 
@@ -98,9 +98,9 @@
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Kendra Schoonmaker</span>
       <br />
-      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+      <a href="https://github.com/kschoonmaker32/startup/tree/main/kwordle">GitHub</a>
     </footer>
   </body>
 </html>
