--- a/kwordle/stats.html
+++ b/kwordle/stats.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scores</title>
+    <title>Stats</title>
     <!--<link rel="icon" href="favicon.ico" />-->
   </head>
   <body>
@@ -21,41 +21,21 @@
           <li><a href="stats.html">Stats</a></li>
         </menu>
       </nav>
-
       <hr />
     </header>
 
     <main>
-      <table>
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Score</th>
-            <th>Date</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>도윤 이</td>
-            <td>34</td>
-            <td>May 20, 2021</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Annie James</td>
-            <td>29</td>
-            <td>June 2, 2021</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Gunter Spears</td>
-            <td>7</td>
-            <td>July 3, 2020</td>
-          </tr>
-        </tbody>
-      </table>
+      <div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>
+
+      <p>
+        This page will display all stats from your kwordle games.
+      </p>
+
+
+      <div id="quote">
+        <div>Words are cheap. Show me the code.</div>
+        <div>- Linus Torvalds</div>
+      </div>
     </main>
 
     <footer>
