modified html to reflect gameplay

--- a/kwordle/index.html
+++ b/kwordle/index.html
@@ -23,18 +23,21 @@
         </menu>
       </nav>
 
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
       <hr />
     </header>
 
     <main>
-      <h1>Welcome</h1>
+      <h1>Welcome to Kwordle!</h1>
+      <p> Kwordle is a word game based on the popular Wordle game. In Kwordle, not only can you solve for the word of the day, but you can also compete against others to see who can solve it the fastest.</p>
       <p>Login to play</p>
       <form method="get" action="play.html">
         <label for="name">Name</label>
         <input type="text" id="name" placeholder="Your name here" />
         <button type="submit">Login</button>
       </form>
+
+
+      <!--placeholder for database connection to retrieve login info-->
     </main>
 
     <footer>
