--- a/kwordle/scores.html
+++ b/kwordle/scores.html
@@ -26,36 +26,40 @@
     </header>
 
     <main>
+      <h1> Leaderboard</h1>
       <table>
         <thead>
           <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Score</th>
+            <th>Time Elapsed</th>
             <th>Date</th>
           </tr>
         </thead>
         <tbody>
           <tr>
+            
             <td>1</td>
-            <td>도윤 이</td>
-            <td>34</td>
+            <td>Bob</td>
+            <td>2:13</td>
             <td>May 20, 2021</td>
+            <td><img src="https://clipart-library.com/images/6crod9Agi.png" alt="gold medal" width=60 height=60></td>
           </tr>
           <tr>
             <td>2</td>
-            <td>Annie James</td>
-            <td>29</td>
+            <td>Polly</td>
+            <td>2:30</td>
             <td>June 2, 2021</td>
           </tr>
           <tr>
             <td>3</td>
-            <td>Gunter Spears</td>
-            <td>7</td>
+            <td>Nathan</td>
+            <td>3:13</td>
             <td>July 3, 2020</td>
           </tr>
         </tbody>
       </table>
+      <!--placeholder for database connection for scores-->
     </main>
 
     <footer>
@@ -64,5 +68,7 @@
       <br />
       <a href="https://github.com/kschoonmaker32/startup/tree/main/kwordle">GitHub</a>
     </footer>
+
+    
   </body>
 </html>
