--- a/kwordle/stats.html
+++ b/kwordle/stats.html
@@ -25,18 +25,40 @@
     </header>
 
     <main>
-      <div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>
-
-      <p>
-        This page will display all stats from your kwordle games.
-      </p>
-
-
-      <div id="quote">
-        <div>Words are cheap. Show me the code.</div>
-        <div>- Linus Torvalds</div>
-      </div>
+      <h1> Stats </h1>
+      <table>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Time Elapsed</th>
+            <th>Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Bob</td>
+            <td>2:13</td>
+            <td>May 20, 2021</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Bob</td>
+            <td>3:00</td>
+            <td>May 19, 2021</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Bob</td>
+            <td>6:00</td>
+            <td>May 18, 2021</td>
+          </tr>
+        </tbody>
+      </table>
+       <!--placeholder for database connection for scores-->
     </main>
+
 
     <footer>
       <hr />
