--- a/kwordle/scores.html
+++ b/kwordle/scores.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scores</title>
     <!--<link rel="icon" href="favicon.ico" />-->
@@ -9,7 +10,7 @@
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Kwordle<sup>&reg;</sup></h1>
+      <h1>Kwordle<sup></sup></h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -26,7 +27,7 @@
     </header>
 
     <main>
-      <h1> Leaderboard</h1>
+      <h2> Leaderboard</h2>
       <table>
         <thead>
           <tr>
