--- a/startup/play.html
+++ b/startup/play.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Play</title>
@@ -11,7 +10,7 @@
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Kwordle<sup></sup></h1>
+      <h1>Kwordle<sup>&reg;</sup></h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -28,7 +27,7 @@
       <hr />
     </header>
     <body>
-      <h2> Play! </h2>
+      <h1> Kwordle </h1>
       
       <div id="game-board">
   
