--- a/startup/scores.html
+++ b/startup/scores.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stats</title>
+    <title>Scores</title>
     <!--<link rel="icon" href="favicon.ico" />-->
   </head>
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Kwordle<sup></sup></h1>
+      <h1>Kwordle<sup>&reg;</sup></h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -22,11 +21,12 @@
           <li><a href="stats.html">Stats</a></li>
         </menu>
       </nav>
+
       <hr />
     </header>
 
     <main>
-      <h2> Stats </h2>
+      <h1> Leaderboard</h1>
       <table>
         <thead>
           <tr>
@@ -38,28 +38,29 @@
         </thead>
         <tbody>
           <tr>
+            
             <td>1</td>
             <td>Bob</td>
             <td>2:13</td>
             <td>May 20, 2021</td>
+            <td><img src="https://clipart-library.com/images/6crod9Agi.png" alt="gold medal" width=60 height=60></td>
           </tr>
           <tr>
             <td>2</td>
-            <td>Bob</td>
-            <td>3:00</td>
-            <td>May 19, 2021</td>
+            <td>Polly</td>
+            <td>2:30</td>
+            <td>June 2, 2021</td>
           </tr>
           <tr>
             <td>3</td>
-            <td>Bob</td>
-            <td>6:00</td>
-            <td>May 18, 2021</td>
+            <td>Nathan</td>
+            <td>3:13</td>
+            <td>July 3, 2020</td>
           </tr>
         </tbody>
       </table>
-       <!--placeholder for database connection for scores-->
+      <!--placeholder for database connection for scores-->
     </main>
-
 
     <footer>
       <hr />
@@ -67,5 +68,7 @@
       <br />
       <a href="https://github.com/kschoonmaker32/startup/tree/main/kwordle">GitHub</a>
     </footer>
+
+    
   </body>
 </html>
