--- a/startup/stats.html
+++ b/startup/stats.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stats</title>
     <!--<link rel="icon" href="favicon.ico" />-->
@@ -10,7 +9,7 @@
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Kwordle<sup></sup></h1>
+      <h1>Kwordle<sup>&reg;</sup></h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -26,7 +25,7 @@
     </header>
 
     <main>
-      <h2> Stats </h2>
+      <h1> Stats </h1>
       <table>
         <thead>
           <tr>
