--- a/startup/index.html
+++ b/startup/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
+    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stats</title>
+    <title>Kwordle HTML</title>
     <!--<link rel="icon" href="favicon.ico" />-->
   </head>
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Kwordle<sup></sup></h1>
+      <h1>Kwordle<sup>&reg;</sup></h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -22,44 +22,23 @@
           <li><a href="stats.html">Stats</a></li>
         </menu>
       </nav>
+
       <hr />
     </header>
 
     <main>
-      <h2> Stats </h2>
-      <table>
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Time Elapsed</th>
-            <th>Date</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Bob</td>
-            <td>2:13</td>
-            <td>May 20, 2021</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Bob</td>
-            <td>3:00</td>
-            <td>May 19, 2021</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Bob</td>
-            <td>6:00</td>
-            <td>May 18, 2021</td>
-          </tr>
-        </tbody>
-      </table>
-       <!--placeholder for database connection for scores-->
-    </main>
+      <h1>Welcome to Kwordle!</h1>
+      <p> Kwordle is a word game based on the popular Wordle game. In Kwordle, not only can you solve for the word of the day, but you can also compete against others to see who can solve it the fastest.</p>
+      <p>Login to play</p>
+      <form method="get" action="play.html">
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Your name here" />
+        <button type="submit">Login</button>
+      </form>
 
+
+      <!--placeholder for database connection to retrieve login info-->
+    </main>
 
     <footer>
       <hr />
