add js functionality

--- a/kwordle/index.html
+++ b/kwordle/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
+    <script src="login.js"></script>
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kwordle HTML</title>
