--- a/kwordle/scores.html
+++ b/kwordle/scores.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
+    <script src="scores.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scores</title>
     <!--<link rel="icon" href="favicon.ico" />-->
