delete simon readme

--- a/kwordle/public/index.html
+++ b/kwordle/public/index.html
@@ -35,7 +35,7 @@
     
       </div>
       <div>
-      <p> Kwordle is a word game based on the popular Wordle game. In Kwordle, not only can you solve for the word of the day, but you can also compete against others to see who can solve it the fastest.</p>
+      <p> Kwordle is a word game based on the popular Wordle game. In Kwordle, not only can you solve for the word of the day, but you can also compete against others to see who can solve it with the highest score.</p>
       </div>
       <div>
       <p>Login to play</p>
