--- a/kwordle/public/scores.html
+++ b/kwordle/public/scores.html
@@ -34,7 +34,7 @@
           <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Time Elapsed</th>
+            <th>Score - Max Daily Score is 5</th>
             <th>Date</th>
           </tr>
         </thead>
@@ -43,20 +43,20 @@
             
             <td>1</td>
             <td>Bob</td>
-            <td>2:13</td>
+            <td>5</td>
             <td>May 20, 2021</td>
             <td><img src="https://clipart-library.com/images/6crod9Agi.png" alt="gold medal" width=60 height=60></td>
           </tr>
           <tr>
             <td>2</td>
             <td>Polly</td>
-            <td>2:30</td>
+            <td>3</td>
             <td>June 2, 2021</td>
           </tr>
           <tr>
             <td>3</td>
             <td>Nathan</td>
-            <td>3:13</td>
+            <td>1</td>
             <td>July 3, 2020</td>
           </tr>
         </tbody>
