--- a/kwordle/public/stats.html
+++ b/kwordle/public/stats.html
@@ -32,7 +32,7 @@
           <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Time Elapsed</th>
+            <th>Score</th>
             <th>Date</th>
           </tr>
         </thead>
@@ -40,19 +40,19 @@
           <tr>
             <td>1</td>
             <td>Bob</td>
-            <td>2:13</td>
+            <td>5</td>
             <td>May 20, 2021</td>
           </tr>
           <tr>
             <td>2</td>
             <td>Bob</td>
-            <td>3:00</td>
+            <td>3</td>
             <td>May 19, 2021</td>
           </tr>
           <tr>
             <td>3</td>
             <td>Bob</td>
-            <td>6:00</td>
+            <td>1</td>
             <td>May 18, 2021</td>
           </tr>
         </tbody>
